--- a/darksouls.html
+++ b/darksouls.html
@@ -12,7 +12,7 @@
 <body style="color: white;">
 
   <div class="banner">
-    <h1 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Horror Games</h1>
+    <h1 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Adventure Game</h1>
     <p>
       <hr>
     </p>
@@ -20,19 +20,19 @@
 
   <h1
     style="color: white; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: center; font-size: 55px;">
-    Conheça o Dead By Dayligth!</h1>
+    Conheça Dark Souls!</h1>
   
-  <img src="img/dead.jpg" alt="dead by dayligth" class="imgdead">
+  <img src="img/darksouls.jpg" alt="dark souls" class="imgdarksouls">
 
   <div style="font-family: sans-serif;">
     <img src="img/jogos.jpg" alt="plataformas" class="imgjogos">
 
-    <h1>Gênero: Terror multiplayer assimétrico</h1>
+    <h1>Gênero: Aventura e Rpg em Ação</h1>
     <h1>Plataformas: PC, PS4/5, Xbox One/Series X|S</h1>
 
     <h2>Como funciona:</h2>
-<img src="img/dbd3.jpg" alt="dead by dayligth" class="imgdbd3">
-    <h4>Dead by Daylight continua sendo um dos jogos de terror multiplayer mais influentes da década. Em 2025, ele recebeu uma atualização especial para o evento de Halloween chamada Assombrados até a Aurora, que trouxe uma nova camada de profundidade e terror à jogabilidade. O jogo mantém sua estrutura clássica: quatro sobreviventes tentam escapar de um assassino, enquanto este os caça em mapas sombrios e cheios de obstáculos. A novidade do evento é a introdução do Reino do Vácuo, uma dimensão paralela que aparece durante as partidas e altera completamente a dinâmica do jogo. Quando um jogador entra nesse reino, ele deixa de emitir rastros e o assassino perde seu raio de terror, tornando os encontros mais imprevisíveis e assustadores. Sobreviventes podem coletar cristais do vácuo para criar bombas de fumaça ou reparar geradores à distância, enquanto os assassinos ganham habilidades de ataque à distância chamadas Assombrações Capturadas. Além disso, o evento trouxe cosméticos temáticos, recompensas diárias e uma ambientação ainda mais sombria, com visuais inspirados em rituais ocultos e criaturas espectrais. A experiência é intensa, estratégica e cheia de momentos de tensão, consolidando Dead by Daylight como um dos pilares do terror competitivo.</h4>
+<img src="img/darksouls1.jpg" alt="dark souls" class="imgdarksouls1">
+    <h4>Dark Souls continua sendo um dos jogos mais punitivos multiplayer mais influentes da década. Em 2012, ele recebeu uma atualização especial para o evento de Halloween chamada Assombrados até a Aurora, que trouxe uma nova camada de profundidade e terror à jogabilidade. O jogo mantém sua estrutura clássica: quatro sobreviventes tentam escapar de um assassino, enquanto este os caça em mapas sombrios e cheios de obstáculos. A novidade do evento é a introdução do Reino do Vácuo, uma dimensão paralela que aparece durante as partidas e altera completamente a dinâmica do jogo. Quando um jogador entra nesse reino, ele deixa de emitir rastros e o assassino perde seu raio de terror, tornando os encontros mais imprevisíveis e assustadores. Sobreviventes podem coletar cristais do vácuo para criar bombas de fumaça ou reparar geradores à distância, enquanto os assassinos ganham habilidades de ataque à distância chamadas Assombrações Capturadas. Além disso, o evento trouxe cosméticos temáticos, recompensas diárias e uma ambientação ainda mais sombria, com visuais inspirados em rituais ocultos e criaturas espectrais. A experiência é intensa, estratégica e cheia de momentos de tensão, consolidando Dead by Daylight como um dos pilares do terror competitivo.</h4>
 <h4>O grande destaque do evento é o retorno do Reino do Vácuo, uma dimensão paralela criada pela Entidade, repleta das cascas descartadas daqueles que perderam suas emoções. Esse reino sombrio se funde à Névoa e afeta diretamente a jogabilidade. No início de cada partida, um portal para o Reino do Vácuo se abre para todos os jogadores, e diversas Fendas do Vácuo surgem pelo mapa. Essas fendas podem ser ativadas com Energia do Vácuo, uma substância misteriosa que os jogadores coletam ao cumprir tarefas específicas durante a partida.</h4>
 <h4>Dentro do Reino do Vácuo, os sobreviventes não deixam rastros, dificultando a perseguição por parte dos assassinos. Por outro lado, os assassinos perdem seu raio de terror, tornando-se ainda mais imprevisíveis. A Energia do Vácuo pode ser usada para criar itens poderosos que mudam o rumo da partida. Os sobreviventes têm acesso ao Cristal do Vácuo, um item exclusivo com duas funções: a Bomba de Fumaça, que atrapalha a visão do assassino e facilita a fuga, e o Reparo de Gerador Remoto, que permite reparar um gerador à distância, desde que ele não esteja sendo usado.</h4>      
 <h4>Os assassinos, por sua vez, podem criar a Assombração Capturada, um ataque de projétil que fere sobreviventes em linha reta. Além disso, esse item concede um bônus passivo à velocidade de quebra de objetos, tornando o assassino mais eficiente mesmo sem usar o ataque diretamente.</h4>
@@ -44,15 +44,14 @@
 
 
 
-<h2>O Reino do Vácuo</h2>
+<h2>Um ciclo sem fim</h2>
 
-      <h3>Durante o evento, um novo elemento é introduzido:</h3>
 <ul> 
-      <li>Sobreviventes que entram no Reino do Vácuo não deixam rastros, dificultando a perseguição.
+      <li>Build complexas para escolher na sua jornada
 </li>
-      <li>Assassinos perdem seu raio de terror, tornando-se ainda mais imprevisíveis.
+      <li>Jogabilidade Complicada e bem punitivo
 </li>
-<li>Fendas do Vácuo surgem no mapa e podem ser abertas com Energia do Vácuo, obtida ao cumprir tarefas específicas.</li>
+<li>O ciclo sempre se recomeça após acender a chama primordial</li>
 </ul>     
     </div>
 
@@ -63,14 +62,15 @@
 
   <ul>
     <li>
-      <a href="darksouls3.html">Dark Souls 3</a>
-    </li>
-    <li>
-      <a href="darksouls.html">Dark Souls</a>
-    </li>
-    <li>
       <a href="silenthill.html">Silent Hill</a>
     </li>
+    <li>
+      <a href="darksouls3.html">Dark Souls 3</a>
+    </li>
+        <li>
+      <a href="index.html">Dead by Dayligth</a>
+    </li>
+
   </ul>
 </body>
 
